# floem

./: Cargo.toml
editor-core/: Cargo.toml
editor-core/src/: editor.rs  util.rs
editor-core/src/buffer/: mod.rs  rope_text.rs
examples/counter/src/: main.rs
examples/view-transition/src/: music_player.rs
examples/webgpu/: Cargo.toml
examples/widget-gallery/src/: dropdown.rs  images.rs
reactive/: Cargo.toml
reactive/src/: id.rs  lib.rs  memo.rs  scope.rs  signal.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
renderer/src/text/: attrs.rs  layout.rs  mod.rs
src/: clipboard.rs  context.rs  event.rs  id.rs  lib.rs  renderer.rs  view_storage.rs  window_handle.rs
src/views/: checkbox.rs  label.rs  mod.rs  rich_text.rs  svg.rs  text_editor.rs  text_input.rs
src/views/editor/: actions.rs  gutter.rs  layout.rs  line_render_cache.rs  lines.rs  mod.rs  movement.rs  phantom_text.rs  prop.rs  text.rs  text_document.rs  view.rs  visual_line.rs
tiny_skia/src/: lib.rs
vger/: Cargo.toml
vger/src/: lib.rs
