[package]
name = "floem_renderer"
version.workspace = true
edition = "2021"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
parking_lot = { workspace = true }
peniko = { workspace = true }
image = { workspace = true }
resvg = { workspace = true }
swash = { workspace = true }

cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", features = ["shape-run-cache"], rev = "4fe90bb"  }
floem-winit = { git = "https://github.com/lapce/winit", rev = "c8d3b8fd6fa4ffd5e0f99be78aacddcf6de57bcd", features = ["rwh_05"] }

wgpu = { workspace = true }
crossbeam = { version = "0.8" }
futures = "0.3.26"
unicode-segmentation = "1.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4" }
