[package]
name = "floem_vger_renderer"
version.workspace = true
edition = "2021"
repository = "https://github.com/lapce/floem"
description = "A native Rust UI library with fine-grained reactivity"
license.workspace = true

[dependencies]
image = { workspace = true }
resvg = { workspace = true }
peniko = { workspace = true }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }

futures = "0.3.26"
anyhow = "1.0.69"
swash = "0.1.8"
floem-vger-rs = { git = "https://github.com/jm-observer/vger-rs.git", rev = "2e5a95d", package = "floem-vger"}
floem_renderer = { path = "../renderer", version = "0.1.0" }

#[patch."https://github.com/lapce/vger-rs"]
#floem-vger-rs = {path = "../../vger-rs", package = "floem-vger"}