[package]
name = "webgpu"
edition = "2021"
license.workspace = true
version.workspace = true

[dependencies]
im.workspace = true
floem = { path = "../.." }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", features = ["shape-run-cache"], rev = "4fe90bb"  }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
